--- a/memo-tori.desktop
+++ b/memo-tori.desktop
@@ -2,8 +2,8 @@
 Type=Application
 Name=Memo Tori
 Comment=Capture a single idea locally
-Exec=/home/Baudouin/Documents/Projets/Memo-Tori/.venv/bin/python3 /home/Baudouin/Documents/Projets/Memo-Tori/app.py
-Icon=/home/Baudouin/Documents/Projets/Memo-Tori/assets/icon.png
+Exec=/home/Baudouin/Documents/Projets/Memo-Tori/.venv/bin/python3 /home/Baudouin/Documents/Projets/Memo-Tori/memo-tori.py
+Icon=memo-tori
 Terminal=false
 Categories=Utility;
 StartupWMClass=Memo Tori
